-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.2.0
-
None
-
Arch Linux x86_64
Qt 5.3.1
If you type some text into the QML/JS Console, using Shift-Home or Shift-Ctrl-Left doesn't select text as expected. Shift-End and Shift-Ctrl-Right works fine though for selecting text.
For Gerrit Dashboard: QTCREATORBUG-12956 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
94045,3 | Fix keyboard selection shortcuts on Qml/JS Console | 3.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |