Fix keyboard selection shortcuts on Qml/JS Console

Change-Id: I804df07c711de62c6c8e34810aa17a7ed86f2011
Task-number: QTCREATORBUG-12956
Reviewed-by: Aurindam Jana <aurindam.jana@digia.com>
Reviewed-by: Ulf Hermann <ulf.hermann@digia.com>